DigicielFull/force-app/main/default/objects/TIMBASURVEYS__QuestionBranchingRule__c/TIMBASURVEYS__QuestionBranchingRule__c.object-meta.xml
<CustomObject>
    <label>QuestionBranchingRule</label>
    <nameField>
        <label>QuestionBranchingRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuestionBranchingRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>