DigicielFull/force-app/main/default/objects/TIMBASURVEYS__QuestionBranchingRule__c/fields/TIMBASURVEYS__Answer__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Answer__c</fullName>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>