DigicielFull/force-app/main/default/objects/TIMBASURVEYS__QuestionBranchingRule__c/fields/TIMBASURVEYS__GreaterThan__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__GreaterThan__c</fullName>
    <label>GreaterThan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>