DigicielFull/force-app/main/default/objects/TIMBASURVEYS__QuestionBranchingRule__c/fields/TIMBASURVEYS__LessThan__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__LessThan__c</fullName>
    <label>LessThan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>