DigicielFull/force-app/main/default/objects/TIMBASURVEYS__QuestionBranchingRule__c/fields/TIMBASURVEYS__NotAnswer__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__NotAnswer__c</fullName>
    <label>NotAnswer</label>
    <type>TextArea</type>
</CustomField>