DigicielFull/force-app/main/default/objects/TIMBASURVEYS__QuestionBranchingRule__c/fields/TIMBASURVEYS__PageBranchingRule__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__PageBranchingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PageBranchingRule</label>
    <referenceTo>TIMBASURVEYS__PageBranchingRule__c</referenceTo>
    <relationshipLabel>QuestionBranchingRules</relationshipLabel>
    <relationshipName>QuestionBranchingRules</relationshipName>
    <type>Lookup</type>
</CustomField>